--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 .contenedorFooter{
     margin-top: 10px;
-    background: #af82ff;
+    background: linear-gradient(#0a6fbd, #0c4c80); 
     padding: 1px;
     margin-left: 10px;
     margin-right: 10px;
